--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -15,6 +15,7 @@ neu:
 - Neuer Patch für VDR (vdr-1.5.11-progressbar-support-0.0.1.diff), der die Unter-
   stützung eines grafischen Fortschrittsbalkens in den Skins classic und st:tng
   einbaut.
+- Schnellere EPG-Menüs, danke an die Patch-Authoren von http://www.open7x0.org
 fixes:
 - Shiften der Uhrzeit: die Startzeit wird jetzt nur noch dann anstelle des 
   Fortschrittsbalken angezeigt, wenn in der Menüvorlage nicht bereits eine
