--- a/HISTORY
+++ b/HISTORY
@@ -17,7 +17,10 @@ new:
 - update of finnish translation, thanks to Rolf Ahrenberg
 - full spanish translation, many thanks to agusmir, dragondefuego, GenaroL, lopezm and
   nachofr from todopvr.com, and especially to bittor
+- update of italian translation, thanks to Diego from vdr-italia.phpbb24.com 
 - changes for builtin graphtft-patch (when using VDR-extension-patch you need > v.37)
+- updated the timercmd-patch for vdr-1.5.12 (patches/timercmd-0.1_1.5.12.diff)
+- added patches/README.patches to describe the existing patches
 fixes: 
 - shifting the time display: the start time now only gets displayed in 
   'Overview - Now' instead of a progressbar, if there's not already a start time 
@@ -39,7 +42,8 @@ fixes:
   empty like in ':@30', thanks to Ulf Kiener for providing a patch
 - fixed a crash in the setup of the addon plugins when VDR is patched with the ext-patch
   and active LIEMIKUUTIO
-
+- 'avoid repeats' combined with 'pause on ... recordings' created to less timers, thanks 
+  to spockele@vdrportal for reporting
 
 2007-09-02: Version 0.9.23
 new: 
