--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -51,6 +51,7 @@ fixes:
   und aktivem LIEMIKUUTIO versehen wurde.
 - 'Wiederholung vermeiden' kombiniert mit 'Pause, wenn ... Aufnahmen existieren' hat
   zu wenige Timer erzeugt, Danke an spockele@vdrportal für den Hinweis
+- einige Compilerwarnungen von g++ 4.3 behoben
 
 
 2007-09-02: Version 0.9.23
