--- a/HISTORY
+++ b/HISTORY
@@ -23,6 +23,8 @@ new:
 - updated the timercmd-patch for vdr-1.5.12 (patches/timercmd-0.1_1.5.12.diff)
 - added patches/README.patches to describe the existing patches
 - support for new info key behaviour in vdr-1.5.13
+- the favorites menu can now also be displayed after 'Overview - Now' via setup, 
+  suggested by Bittor Corl
 fixes: 
 - shifting the time display: the start time now only gets displayed in 
   'Overview - Now' instead of a progressbar, if there's not already a start time 
