--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2008-01-08 13:18+0100\n"
+"POT-Creation-Date: 2008-01-17 13:35+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -111,6 +111,9 @@ msgstr "vor ben.-def. Zeiten"
 
 msgid "after user-def. times"
 msgstr "nach ben.-def. Zeiten"
+
+msgid "before 'next'"
+msgstr "vor 'Nächste'"
 
 msgid "General"
 msgstr "Allgemein"
