--- a/HISTORY
+++ b/HISTORY
@@ -51,6 +51,8 @@ fixes:
 - 'avoid repeats' combined with 'pause on ... recordings' created to less timers, thanks 
   to spockele@vdrportal for reporting
 - fixed some compiler warnings with g++ 4.3
+- fine-tuning fuzzy matching of descriptions, thanks to Alf Fahland for providing a patch
+
 
 2007-09-02: Version 0.9.23
 new: 
