--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -70,7 +70,7 @@ fixes:
   den Hinweis.
 - Beschriftung der grünen/gelben Taste nach Umschalten im Menü "Schedule" korrigiert.
   Danke an Andreas Mair für den Hinweis.
-
+- Auswertung von Compiler-Flags wie WITHOUT_EPGSEARCHONLY,... korrigiert.
 
 2007-09-02: Version 0.9.23
 neu: 
