--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -1,7 +1,7 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
 
-2008-xx-xx: Version 0.9.24
+2008-04-29: Version 0.9.24
 neu:
 - Unterstützung von vdr-1.6.x/1.7.x
 - Die Suche und damit das Suchtimer-Update sind nun etwa 25% schneller
