french translation update, 0.9.25.beta1

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,11 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+
+2008-xx-xx; Version 0.9.25
+new:
+- french translation update, thanks to Patrice Staudt
+
+
 2008-04-29: Version 0.9.24
 new:
 - support for vdr-1.6.x/1.7.x
