--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -22,6 +22,7 @@ fixes:
   holung ignoriert.
 - Es wird nun cCondWait::Wait anstelle von cCondWait:SleepMs verwendet um Probleme beim
   Beenden zu vermeiden, danke e9hack@vdrportal für den Patch
+- Zeilenumbrüche im SVDRP-Befehl LSTT korrigiert, Danke an Andreas Mair für einen Patch
 
 
 2008-04-29: Version 0.9.24
